# Chatserver

./: CMakeLists.txt  README.md
include/: public.hpp
include/client/: clientChatModel.hpp  clientserver.hpp
include/server/: chatserver.hpp  chatservice.hpp  group.hpp  groupuser.hpp  user.hpp
include/server/Model/: friendmodel.hpp  groupmodel.hpp  offlinemessagemodel.hpp  usermodel.hpp
include/server/db/: db.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  clientChatModle.cpp  clientserver.cpp  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/Model/: FriendModel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/db/: db.cpp
src/server/redis/: redis.cpp
