cmake_minimum_required (VERSION 3.0)
project(main)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fsanitize=address")
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/server)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/server/Model)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/client)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/server/redis)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/server/db)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)
